# ECE6122_custom_final_project

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  PX4Interface.cpp  PX4Interface.hpp  README.md  build.sh  build_mpi.sh  install_deps.sh  launch_px4.sh  main.cpp
GazeboTerrainGenerator/: gps_to_gazebo.py
GazeboTerrainGenerator/gazebo_world/: custom_terrain.world  launch_custom_terrain.sh
TerrainPathPlanner/: CMakeLists.txt
TerrainPathPlanner/include/: LLAPoint.hpp  LLAPointHash.hpp  NEDPoint.hpp  NEDPointHash.hpp  PathNode.hpp  TerrainPathPlanner.hpp  TerrainPathPlannerMPI.hpp
TerrainPathPlanner/src/: TerrainPathPlanner.cpp  TerrainPathPlannerMPI.cpp  TerrainPathPlanner_MPIStubs.cpp
TerrainServer/: CMakeLists.txt  api_request.py  terrain_cache_system_diagram.md
TerrainServer/include/: ITerrainServer.hpp  Logger.hpp  TerrainServerGeoTIFF.hpp  TerrainServerOpenTopo.hpp
TerrainServer/src/: ITerrainServer.cpp  Logger.cpp  TerrainServerGeoTIFF.cpp  TerrainServerOpenTopo.cpp  main.cpp
TerrainServer/test/: CMakeLists.txt  geo_scatter_plot_vis.py  geo_surf_plot2_vis.py  geo_surf_plot_vis.py  map.html  map_plot_vis.py  test_grand_canyon_high_res.cpp  test_smart_cache.cpp  test_terrain_basic.cpp  test_terrain_grid.cpp  test_terrain_server.cpp
TerrainVisualizer/: CMakeLists.txt  README.md
TerrainVisualizer/include/: Camera.hpp  Cube.hpp  ECEF.hpp  MouseState.hpp  NED.hpp  PathLine.hpp  Shader.hpp  TerrainMesh.hpp  constants.hpp  functions.hpp
TerrainVisualizer/src/: Camera.cpp  Cube.cpp  Shader.cpp  TerrainMesh.cpp  main.cpp
